# enterprise_data_refinery

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tickets.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
docs/: architecture.html  index.html
edr/: alerts.py  app.py  charts.py  cli.py  config.py  db.py  logging.py  models.py  orchestrate.py  publish.py
edr/llm/: base.py  claude.py  fake.py  ollama.py
edr/migrations/: env.py
edr/packs/: adapters.py  base.py  loader.py
edr/pipeline/: drift.py  extract.py  gate.py  run.py
edr/static/: app.css
edr/templates/: _loglines.html  _proposal.html  _provenance.html  base.html  cost.html  explore.html  gate.html  login.html  logs.html  outputs.html  overview.html  run_detail.html  runs.html  source_detail.html  sources.html  styleguide.html  wizard.html
edr/web/: auth.py  queries.py  routes.py  templating.py  wizard.py
eval/: README.md  labels.json  make_dataset.py  results.json  run_eval.py
eval/dataset/: permit_00.txt  permit_01.txt  permit_02.txt  permit_03.txt  permit_04.txt  permit_05.txt  permit_06.txt  permit_07.txt  permit_08.txt  permit_09.txt  permit_10.txt  (+13 more)
tests/: conftest.py  test_claude.py  test_config.py  test_extract_units.py  test_gate.py  test_lifecycle.py  test_models.py  test_ollama_integration.py  test_packs.py  test_publish.py  test_reference_packs.py  test_smoke.py  test_socrata.py  test_spine.py  test_web.py  test_wizard.py
(+25 files in other folders)
